--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-dotenv==1.0.0
+sentence-transformers==2.2.2
+torch>=2.0.0
+Pillow==10.3.0
+httpx==0.27.0
